update uri mongo

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=4050
-MONGO_URL="mongodb://gabriel:gabosoft1234!@127.0.0.1:27017/chat"
+MONGO_URL="mongodb://gabriel:gabosoft1234!@127.0.0.1:27017/chat?authSource=admin"
