--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4050
-MONGO_URL="mongodb://gabriel:gabosoft1234!@127.0.0.1:27017/chat?authSource=admin"
+MONGO_URL="mongodb://user:pass@127.0.0.1:27017/chat?authSource=admin"
 node_env=0
